# bbcat-adm

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  bbcat-adm-uninstalled.pc.in  bbcat-adm.pc.in  configure.ac  doxygen.cfg
debian/: changelog  control
share/: licences.txt
src/: ADMData.cpp  ADMData.h  ADMObjects.cpp  ADMObjects.h  ADMSubObjects.cpp  ADMSubObjects.h  ADMXMLGenerator.cpp  ADMXMLGenerator.h  AudioObjectCursor.h  AudioObjectParameters.cpp  AudioObjectParameters.h  CMakeLists.txt  ConfigVersion.cmake.in  Makefile.am  XMLValue.cpp  XMLValue.h  register.cpp  register.h
test/: AudioObjectParametersTest.cpp  CMakeLists.txt  Makefile.am  XMLTests.cpp  inputdata.xml  test.xml  testbase.cpp
